<resources>
    <string name="app_name">NiramaiAssignment</string>
    <string name="project_name">Project Name</string>
    <string name="created_on">Created on</string>
    <string name="company_name">Company Name</string>
    <string name="short_description">Short Description</string>
    <string name="update_project">UPDATE PROJECT</string>
    <string name="long_description">Long Description</string>
    <string name="fab_content_desc">create project</string>
    <string name="project_label">Project</string>
    <string name="company_label">Company</string>
    <string name="content_description_search">search projects</string>
    <string name="search">search</string>
    <string name="page_title">Projects</string>
    <string name="filter">filter</string>
    <string name="content_description_filter">filter projects</string>
    <string name="sortByDate">Sort By Date</string>
    <string name="sortByName">Sort By Name</string>
    <string name="content_description_sort">sort projects</string>
    <string name="dateExample">9 Jul 2021</string>
    <string name="prefixCompanyName">for</string>
    <string name="delete_title">Do You Want To Delete This Project?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>