<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sortByDate"
        android:icon="@drawable/ic_sort"
        android:title="@string/sortByDate"
        android:contentDescription="@string/content_description_sort"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sortByName"
        android:icon="@drawable/ic_sort"
        android:title="@string/sortByName"
        android:contentDescription="@string/content_description_sort"
        app:showAsAction="never"/>
</menu>