<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="9dp"
    app:cardCornerRadius="6dp"
    app:contentPadding="9dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/fieldDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans"
            android:text="@string/dateExample"
            android:textColor="@color/ebonyClay"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/fieldProjectName"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fieldProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_semi_bold"
            android:text="@string/project_name"
            android:textColor="@color/ebonyClay"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fieldCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/company_name"
            android:textColor="@color/ebonyClay"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fieldProjectName" />

        <TextView
            android:id="@+id/fieldShortDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_medium_italic"
            android:text="@string/short_description"
            android:textColor="@color/ebonyClay"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/fieldCompanyName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>