<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.updatedetails.UpdateDetailsActivity">

    <TextView
        android:id="@+id/labelProjectName"
        style="@style/TextViewHeader4"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etProjectName"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelProjectName" />

    <TextView
        android:id="@+id/labelCompanyName"
        style="@style/TextViewHeader4"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProjectName" />

    <EditText
        android:id="@+id/etCompanyName"
        style="@style/EditText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/labelCompanyName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideVertical"/>

    <TextView
        android:id="@+id/labelDate"
        style="@style/TextViewHeader4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_on"
        app:layout_constraintBottom_toBottomOf="@id/labelCompanyName"
        app:layout_constraintStart_toEndOf="@id/guideVertical"
        app:layout_constraintTop_toTopOf="@id/labelCompanyName" />

    <TextView
        android:id="@+id/textDate"
        style="@style/TextViewDate"
        android:layout_width="0dp"
        android:text="date"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start|center_vertical"
        app:layout_constraintStart_toEndOf="@id/guideVertical"
        app:layout_constraintTop_toBottomOf="@id/labelDate"
        app:layout_constraintBottom_toBottomOf="@id/etCompanyName"/>

    <TextView
        android:id="@+id/labelShortDesc"
        style="@style/TextViewHeader4"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/short_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCompanyName" />

    <EditText
        android:id="@+id/etShortDesc"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelShortDesc" />

    <TextView
        android:id="@+id/labelLongDesc"
        style="@style/TextViewHeader4"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/long_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etShortDesc" />

    <EditText
        android:id="@+id/etLongDesc"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|top"
        app:layout_constraintTop_toBottomOf="@id/labelLongDesc"
        app:layout_constraintBottom_toTopOf="@id/updateProject"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateProject"
        style="@style/BlueButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/update_project"
        app:layout_constraintDimensionRatio="5.98"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLongDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>